--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-TECH SOLUTIONS | Electronics & IoT E-Learning</title>
+    <title>ETECH SOLUTIONS | Electronics & IoT E-Learning</title>
       <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/pw/AP1GczNty6_2Cq0hySwk_JWjLVcINZz0lyqfq9BNLXjr9-qhG_94UV7oQLhTNB7VtAP8qM1G06Gj36pEqbZyvBWZlV4508OriC45KwQoabQ8qSRc5HHMGPVu=w2400?source=screenshot.guru"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
@@ -16189,5 +16189,6 @@ window.addEventListener('click', (e) => {
     </script>
 </body>
 </html>
+
 
 
