--- a/index.html
+++ b/index.html
@@ -7307,7 +7307,7 @@ input[type="radio"]:checked + .payment-option-content {
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/e_techsolutions_?igsh=am0wa3ZoY2c5ZDE="><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="www.youtube.com/@E-TECHSOLUTIONS-z7w1d"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 
@@ -16189,6 +16189,7 @@ window.addEventListener('click', (e) => {
     </script>
 </body>
 </html>
+
 
 
 
