--- a/index.html
+++ b/index.html
@@ -5594,6 +5594,7 @@ input[type="radio"]:checked + .payment-option-content {
                         <h3>Arduino Master Class</h3>
                         <p>Become a master of Arduino programming and hardware. This course covers advanced topics, complex projects, and troubleshooting techniques.</p>
                         <div class="course-price">₹249</div>
+                        <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_R2sAJoQ3yH8Sny" async> </script> </form>
                         <button class="btn btn-arduino purchase-course-btn" data-course-id="arduino-master">Enroll Now</button>
                         <button class="btn btn-success course-access-btn mt-2" data-course-id="arduino-master">Access Course</button>
                     </div>
@@ -16189,6 +16190,7 @@ window.addEventListener('click', (e) => {
     </script>
 </body>
 </html>
+
 
 
 
