--- a/index.html
+++ b/index.html
@@ -6554,7 +6554,7 @@ input[type="radio"]:checked + .payment-option-content {
                 <div class="project-content">
                     <h3>Smart Home Automation</h3>
                     <p>Control lights, fans, and appliances remotely using ESP32 and Blynk app.</p>
-                   
+                   <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_R2sD0NohApWT9H" async> </script> </form>
                     <a href="https://forms.gle/Y2jERyPvKoAdW6zn7" class="btn btn-warning" style="margin-top: 10px;"><i class="fas fa-shopping-cart"></i> Buy Product</a>
                     <div class="project-meta">
                         <span><i class="fas fa-clock"></i> 4 hours</span>
@@ -16190,6 +16190,7 @@ window.addEventListener('click', (e) => {
     </script>
 </body>
 </html>
+
 
 
 
